# WireguardRelay-rust

./: .appveyor.yml  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
src/: config.rs  error.rs  handshake.rs  lib.rs  main.rs  session.rs  socket.rs  validator.rs
tests/: fuzzing.rs  multiple_sessions.rs  serial.rs  session.rs  single_session.rs  timeout_session.rs
tests/serial/: session.rs
tests/utils/: mod.rs
